<resources>
    <string name="app_name">WaniKani</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_support_the_developer">Support the developer</string>
    <string name="title_donations">Donations</string>
    <string name="title_logout">Logout</string>
    <string name="title_radicals">Radicals</string>
    <string name="title_kanji">Kanji</string>
    <string name="title_vocabulary">Vocabulary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_settings_allcaps">SETTINGS</string>
    <string name="title_logout_allcaps">LOGOUT</string>
    <string name="title_about_allcaps">ABOUT</string>
    <string name="ab_title_reviews">Reviews</string>
    <string name="ab_title_lessons">Lessons</string>
    <string name="action_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_back">Back</string>
    <string name="action_back_allcaps">BACK</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_view_on_web">View on Web</string>
    <string name="action_more_items">More Items</string>
    <string name="action_more_items_capital">MORE ITEMS</string>
    <string name="action_level">Level</string>
    <string name="content_profile_sect">Sect</string>
    <string name="content_profile_joined">Joined</string>
    <string name="content_profile_posts_scribed">POSTS SCRIBED</string>
    <string name="content_profile_topics_scribed">TOPICS SCRIBED</string>
    <string name="content_profile_website">WEBSITE</string>
    <string name="content_profile_twitter">TWITTER</string>
    <string name="card_title_about">About</string>
    <string name="card_title_available">Available</string>
    <string name="card_title_notifications">Notifications</string>
    <string name="card_title_reviews">Reviews</string>
    <string name="card_title_status">SRS</string>
    <string name="card_title_progress">Progress</string>
    <string name="card_title_recent_unlocks">Recent Unlocks</string>
    <string name="card_title_critical_items">Critical Items</string>
    <string name="card_content_available_lessons_capital">LESSONS</string>
    <string name="card_content_available_reviews_capital">REVIEWS</string>
    <string name="card_content_available_lessons">Lessons</string>
    <string name="card_content_available_reviews">Reviews</string>
    <string name="card_content_progress_level">Level</string>
    <string name="card_content_progress_radicals">Radicals</string>
    <string name="card_content_progress_radicals_allcaps">RADICALS</string>
    <string name="card_content_progress_kanji">Kanji</string>
    <string name="card_content_progress_kanji_allcaps">KANJI</string>
    <string name="card_content_progress_vocabulary">Vocabulary</string>
    <string name="card_content_progress_vocabulary_allcaps">VOCABULARY</string>
    <string name="card_content_progress_total_allcaps">TOTAL</string>
    <string name="card_content_progress_total_items_allcaps">TOTAL ITEMS</string>
    <string name="card_content_reviews_available_now">Available Now</string>
    <string name="card_content_reviews_next_review">Next Review</string>
    <string name="card_content_reviews_more_reviews">More Reviews</string>
    <string name="card_content_reviews_next_hour">Next Hour</string>
    <string name="card_content_reviews_next_day">Next Day</string>
    <string name="card_content_critical_no_items_title">You\'re good!</string>
    <string name="card_content_critical_no_items_summary">Looks like you are good in your studies. All items are healthy. Well, for now...</string>
    <string name="card_content_unlocks_no_items_title">Work harder!</string>
    <string name="card_content_unlocks_no_items_summary">Nothing unlocked recently. You might want to get done with your current studies in order to unlock more...</string>
    <string name="card_title_vacation_mode">Vacation Mode</string>
    <string name="card_content_vacation_mode">Vacation mode is active. This means that the SRS system has been frozen and no reviews or lessons will be available until deactivation.</string>
    <string name="action_deactivate">DEACTIVATE</string>
    <string name="content_radicals_legend">Legend</string>
    <string name="content_radicals_legend_active">Active</string>
    <string name="content_radicals_legend_burned">Burned</string>
    <string name="content_radicals_legend_locked">Locked</string>
    <string name="no_items_summary">"No items available. You probably haven't reached this level or there is a connection issue."</string>
    <string name="no_items_title">No items!</string>
    <string name="card_title_remaining_radicals">Remaining Radicals</string>
    <string name="card_title_remaining_kanji">Remaining Kanji</string>
    <string name="error_loading_items">Couldn\'t load items :(</string>
    <string name="srs_title_apprentice">Apprentice</string>
    <string name="srs_title_guru">Guru</string>
    <string name="srs_title_master">Master</string>
    <string name="srs_title_enlightened">Enlightened</string>
    <string name="srs_title_burned">Burned</string>
    <string name="action_sign_in">Sign In</string>
    <string name="hint_api_key">API Key</string>
    <string name="action_how_to_api_key">How do I get my key?</string>
    <string name="error_invalid_api_key">The key provided seems to be invalid. Please check again.</string>
    <string name="error_enter_api_key">API Key can\'t be left empty!</string>
    <string name="wanikani_hungers">WaniKani Hungers</string>
    <string name="card_title_details_meaning">Meaning</string>
    <string name="card_title_details_reading">Reading</string>
    <string name="card_title_details_alternative_meanings">Alternative Meanings</string>
    <string name="card_title_details_user_synonyms">User Synonyms</string>
    <string name="card_title_details_reading_onyomi">On\'yomi</string>
    <string name="card_title_details_reading_kunyomi">Kun\'yomi</string>
    <string name="card_title_details_reading_note">Reading Note</string>
    <string name="card_title_details_meaning_note">Meaning Note</string>
    <string name="card_title_details_progress">Progress</string>
    <string name="card_content_details_burned">Burned!</string>
    <string name="card_content_details_progress_unlocked">Unlocked</string>
    <string name="card_content_details_progress_unlocked_allcaps">UNLOCKED</string>
    <string name="card_content_details_progress_next_available">Next Available</string>
    <string name="card_content_details_progress_next_available_allcaps">NEXT AVAILABLE</string>
    <string name="card_content_details_progress_meaning_correct">Meaning Correct</string>
    <string name="card_content_details_progress_meaning_correct_allcaps">MEANING CORRECT</string>
    <string name="card_content_details_progress_meaning_incorrect">Meaning Incorrect</string>
    <string name="card_content_details_progress_meaning_incorrect_allcaps">MEANING INCORRECT</string>
    <string name="card_content_details_progress_meaning_max_streak">Meaning Max Streak</string>
    <string name="card_content_details_progress_meaning_max_streak_allcaps">MEANING MAX STREAK</string>
    <string name="card_content_details_progress_meaning_current_streak">Meaning Current Streak</string>
    <string name="card_content_details_progress_meaning_current_streak_allcaps">MEANING CURRENT STREAK</string>
    <string name="card_content_details_progress_reading_correct">Reading Correct</string>
    <string name="card_content_details_progress_reading_correct_allcaps">READING CORRECT</string>
    <string name="card_content_details_progress_reading_incorrect">Reading Incorrect</string>
    <string name="card_content_details_progress_reading_incorrect_allcaps">READING INCORRECT</string>
    <string name="card_content_details_progress_reading_max_streak">Reading Max Streak</string>
    <string name="card_content_details_progress_reading_max_streak_allcaps">READING MAX STREAK</string>
    <string name="card_content_details_progress_reading_current_streak">Reading Current Streak</string>
    <string name="card_content_details_progress_reading_current_streak_allcaps">READING CURRENT STREAK</string>
    <string name="card_content_details_progress_locked">Item Locked</string>
    <string name="card_content_details_progress_or_not_learned">or not learned yet</string>
    <string name="card_content_details_progress_on">on</string>
    <string name="pref_title_apikey">API Key</string>
    <string name="pref_category_dashboard">Dashboard</string>
    <string name="pref_title_recent_unlocks">Recent unlocks number</string>
    <string name="pref_summary_recent_unlocks">Number of recent unlock items to display in dashboard</string>
    <string name="pref_title_critical_items_percentage">Critical items percentage</string>
    <string name="pref_summary_critical_items_percentage">All items with percentage correct below the specified percentage will be displayed</string>
    <string name="pref_title_critical_items_numner">Critical items number</string>
    <string name="pref_summary_critical_items_number">Number of critical items to display in dashboard</string>
    <string name="pref_category_general">General</string>
    <string name="pref_title_fonts">Fonts</string>
    <string name="pref_summary_fonts">About the fonts used in this application</string>
    <string name="pref_category_lessons">Lessons</string>
    <string name="pref_category_reviews">Reviews</string>
    <string name="pref_title_screen_orientation">Screen orientation</string>
    <string name="pref_summary_screen_orientation"></string>
    <string name="pref_title_use_specific_dates">Specific dates</string>
    <string name="pref_summary_use_specific_dates">Show dates and times specifically instead of showing relative time</string>
    <string name="pref_category_developer">Developer</string>
    <string name="pref_title_open_source_licences">Open source licenses</string>
    <string name="pref_title_app_version">App version</string>
    <string name="pref_category_userscripts_and_enhancements">Userscripts and enhancements</string>
    <string name="pref_title_review_improvements">Review improvements</string>
    <string name="pref_summary_review_improvements">Enable userscripts and Custom IME</string>
    <string name="pref_title_ignore_button">Ignore button</string>
    <string name="pref_summary_ignore_button">Enable porting of Rui Pinheiro\'s ignore button</string>
    <string name="pref_title_single_button">Single button</string>
    <string name="pref_summary_single_button">Show \"1\" button, to enable item by item mode
        				(reading and meaning are next to each other)</string>
    <string name="pref_title_portrait_mode">Portrait mode</string>
    <string name="pref_summary_portrait_mode">Force portrait mode when entering answers</string>
    <string name="pref_title_wanikani_improve">WaniKani improve</string>
    <string name="pref_summary_wanikani_improve">Skip to next question, if correct. Port of
        		\@Seiji and \@Jatacid scripts</string>
    <string name="pref_title_review_order">Review order</string>
    <string name="screen_orientation_auto">Auto-rotate</string>
    <string name="screen_orientation_portrait">Portrait</string>
    <string name="screen_orientation_landscape">Landscape</string>
    <string name="dialog_logout_title">Confirm Logout</string>
    <string name="dialog_logout_message">Are you sure you wish to logout? This will erase all stored data!</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
</resources>