<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="pref_api_key"
        android:title="@string/pref_title_apikey" />

    <PreferenceCategory android:title="@string/pref_category_dashboard">
        <tr.xip.wanikani.settings.preferences.RecentUnlocksNumberPreference
            android:key="pref_dashboard_recent_unlock_number"
            android:title="@string/pref_title_recent_unlocks"
            android:summary="@string/pref_summary_recent_unlocks"
            android:defaultValue="10"/>
        <tr.xip.wanikani.settings.preferences.CriticalItemsPercentagePreference
            android:key="pref_dashboard_critical_items_percentage"
            android:title="@string/pref_title_critical_items_percentage"
            android:summary="@string/pref_summary_critical_items_percentage"
            android:defaultValue="75" />
    </PreferenceCategory>

</PreferenceScreen>