<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_placeholder_height"
        android:background="@color/apptheme_actionbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadingEdge="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pref_title_apikey"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/settings_api_key"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="**********************3d7fe5a"
                        android:textColor="@color/text_gray" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/pref_category_general"
                    android:textColor="@color/apptheme_main" />

                <TextView
                    android:id="@+id/settings_general_fonts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_background_neutral"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/pref_title_fonts"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/separator_light" />

                <RelativeLayout
                    android:id="@+id/settings_general_use_specific_dates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_background_neutral"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="62dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pref_title_use_specific_dates"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pref_summary_use_specific_dates"
                            android:textColor="@color/text_gray" />
                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/settings_general_use_specific_dates_check_box"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="16dp" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/pref_category_dashboard"
                    android:textColor="@color/apptheme_main" />

                <LinearLayout
                    android:id="@+id/settings_dashboard_recent_unlocks_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_background_neutral"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pref_title_recent_unlocks"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pref_summary_recent_unlocks"
                        android:textColor="@color/text_gray" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/separator_light" />

                <LinearLayout
                    android:id="@+id/settings_dashboard_critical_items_percentage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_background_neutral"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pref_title_critical_items_percentage"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pref_summary_critical_items_percentage"
                        android:textColor="@color/text_gray" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/pref_category_lessons"
                    android:textColor="@color/apptheme_main" />

                <LinearLayout
                    android:id="@+id/settings_lessons_screen_orientation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_background_neutral"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pref_title_screen_orientation"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/settings_lessons_screen_orientation_summary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pref_summary_screen_orientation"
                        android:textColor="@color/text_gray" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/pref_category_reviews"
                    android:textColor="@color/apptheme_main" />

                <LinearLayout
                    android:id="@+id/settings_reviews_screen_orientation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_background_neutral"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pref_title_screen_orientation"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/settings_reviews_screen_orientation_summary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pref_summary_screen_orientation"
                        android:textColor="@color/text_gray" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/actionbar_shadow" />
    </RelativeLayout>
</LinearLayout>