<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ViewSwitcher
        android:id="@+id/firt_time_view_switcher"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/logo_wanikani_stamp"
                    android:layout_height="150dp" />

                <TextView
                    style="@style/Widget.TextView.Light"
                    android:layout_width="wrap_content"
                    android:text="@string/wanikani_hungers"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center_horizontal"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:textColor="@color/text_gray"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/first_time_api_key"
                    android:layout_width="wrap_content"
                    android:minWidth="300dp"
                    android:textColor="@color/text_gray"
                    android:textColorHint="@color/text_gray_light"
                    android:hint="@string/hint_api_key"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/first_time_how_to_api_key"
                    android:background="@drawable/simple_item_background"
                    android:layout_width="wrap_content"
                    android:textSize="12sp"
                    android:paddingLeft="6dp"
                    android:textColor="@color/text_gray"
                    android:text="@string/action_how_to_api_key"
                    android:layout_height="20dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/separator_login"
                android:layout_above="@+id/first_time_sign_in" />

            <Button
                android:id="@+id/first_time_sign_in"
                android:background="@drawable/simple_item_background"
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:textColor="@color/text_gray"
                android:text="@string/action_sign_in"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </ViewSwitcher>

</RelativeLayout>